welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:5: error: type mismatch;
 found   : Int
 required: Boolean
		if ((num%10)%5) {
                            ^nearTen:5: error: type mismatch;
 found   : Unit
 required: Boolean
		if ((num%10)%5) {
                ^